# imageProcessing

./: CMakeLists.txt  brightness_kernel.cl  main.cpp  sobel_kernel.cl  vcpkg.json
